--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,9 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.1.4'
 
         // Java Code Coverage (JaCoCo)
-        classpath "com.dicedmelon.gradle:jacoco-android:0.1.1"
+        classpath('com.dicedmelon.gradle:jacoco-android:0.1.2') {
+            exclude group: 'org.codehaus.groovy', module: 'groovy-all'
+        }
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
